[gd_scene load_steps=6 format=3 uid="uid://lgsgv7ql6wlx"]

[ext_resource type="Script" path="res://scripts/characters/enemy.gd" id="1_1cnfk"]
[ext_resource type="Texture2D" uid="uid://6qn8canp5clq" path="res://assets/characters/enemy.png" id="1_xl3b7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6btiu"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_stb47"]
size = Vector2(16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_k83vb"]
radius = 88.0057

[node name="CharacterBody2D" type="CharacterBody2D"]
scale = Vector2(0.75, 0.75)
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_1cnfk")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_xl3b7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_6btiu")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("RectangleShape2D_stb47")

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
shape = SubResource("CircleShape2D_k83vb")

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
